fixed css variables file

--- a/app/assets/stylesheets/dark/_variables.css.sass
+++ b/app/assets/stylesheets/dark/_variables.css.sass
@@ -25,12 +25,16 @@
  *
  * See doc/COPYRIGHT.rdoc for more details.  ++*/
 
-$main_menu_border_color:                        #053242 !default
-$main_menu_border_width:                        0px !default
-$main_menu_item_border_color:                   #053242 !default
-$main_menu_item_border_width:                   0px !default
+$main_menu_border_color:                        #053242
+$main_menu_border_width:                        0px
+$main_menu_item_border_color:                   #053242
+$main_menu_item_border_width:                   0px
 
-$main_menu_bg_color:                            #053242 !default
-$main_menu_bg_hover_selected_color:             #04232f !default
-$main_menu_font_color:                          #BBBBBB !default
-$main_menu_selected_hover_indicator_color:      #BBBBBB !default
+$main_menu_bg_color:                            #053242
+$main_menu_bg_hover_selected_color:             #04232f
+$main_menu_font_color:                          #BBBBBB
+$main_menu_selected_hover_indicator_color:      #BBBBBB
+
+$main_menu_sidebar_font_color:                  #FFFFFF
+$main_menu_sidebar_h3_color:                    #FFFFFF
+$main_menu_sidebar_link_color:                  #FFFFFF
