Enable separate hover effect for submenu toggle (#2231)

--- a/app/assets/stylesheets/dark/_variables.css.sass
+++ b/app/assets/stylesheets/dark/_variables.css.sass
@@ -38,3 +38,4 @@ $main_menu_selected_hover_indicator_color:      #BBBBBB
 $main_menu_sidebar_font_color:                  #FFFFFF
 $main_menu_sidebar_h3_color:                    #FFFFFF
 $main_menu_sidebar_link_color:                  #FFFFFF
+$main_menu_enable_toggle_highlighting:          true
