Dasherize all Sass variables
Analog to core commit:
https://github.com/opf/openproject/commit/6f659db6355902b90e24425b006e43790c8b8c7f

Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/app/assets/stylesheets/dark/_variables.css.sass
+++ b/app/assets/stylesheets/dark/_variables.css.sass
@@ -25,23 +25,23 @@
  *
  * See doc/COPYRIGHT.rdoc for more details.  ++*/
 
-$main_menu_border_color:                        #053242
-$main_menu_border_width:                        0px
-$main_menu_item_border_color:                   #053242
-$main_menu_item_border_width:                   0px
+$main-menu-border-color:                        #053242
+$main-menu-border-width:                        0px
+$main-menu-item-border-color:                   #053242
+$main-menu-item-border-width:                   0px
 
-$main_menu_bg_color:                            #053242
-$main_menu_bg_hover_selected_background:        #04232f
-$main_menu_font_color:                          #BBBBBB
-$main_menu_selected_hover_indicator_color:      #BBBBBB
+$main-menu-bg-color:                            #053242
+$main-menu-bg-hover-selected-background:        #04232f
+$main-menu-font-color:                          #BBBBBB
+$main-menu-selected-hover-indicator-color:      #BBBBBB
 
-$main_menu_sidebar_font_color:                  #FFFFFF
-$main_menu_sidebar_h3_color:                    #FFFFFF
-$main_menu_sidebar_link_color:                  #FFFFFF
-$main_menu_enable_toggle_highlighting:          true
+$main-menu-sidebar-font-color:                  #FFFFFF
+$main-menu-sidebar-h3-color:                    #FFFFFF
+$main-menu-sidebar-link-color:                  #FFFFFF
+$main-menu-enable-toggle-highlighting:          true
 
-$drop_down_unselected_font_color:               #333333
-$drop_down_selected_font_color:                 #BBBBBB
-$drop_down_selected_bg_color:                   #053242
+$drop-down-unselected-font-color:               #333333
+$drop-down-selected-font-color:                 #BBBBBB
+$drop-down-selected-bg-color:                   #053242
 
-$context_menu_font_color:                       #333333
+$context-menu-font-color:                       #333333
