Make main menu font color pure white for contrast
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/app/assets/stylesheets/dark/_variables.css.sass
+++ b/app/assets/stylesheets/dark/_variables.css.sass
@@ -36,8 +36,8 @@ $main-menu-item-border-width:                   0px
 
 $main-menu-bg-color:                            #053242
 $main-menu-bg-hover-selected-background:        #04232f
-$main-menu-font-color:                          #BBBBBB
-$main-menu-selected-hover-indicator-color:      #BBBBBB
+$main-menu-font-color:                          white
+$main-menu-selected-hover-indicator-color:      white
 
 $main-menu-sidebar-font-color:                  #FFFFFF
 $main-menu-sidebar-h3-color:                    #FFFFFF
